test/types/void/void-formal-3.good
void-formal-3.chpl:5: error: Formal 'x' cannot be declared 'void'. Consider using 'nothing' instead.
