test/types/void/void-formal-3.chpl
proc tf() type {
  return void;
}

proc f(x : tf()) {
}

f(1);
